--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,14 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
 }
 
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -61,15 +69,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    def fragment_version = "1.3.2"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    testImplementation "androidx.fragment:fragment-testing:$fragment_version"
+
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     implementation "com.nhaarman:mockito-kotlin:1.6.0"
-
-    def fragment_version = "1.3.2"
-    // Kotlin
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    // Testing Fragments in Isolation
-    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test:core-ktx:1.3.0'
 
     def nav_version = "2.3.4"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
