--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs.kotlin'
 }
 
 tasks.withType(Test) {
@@ -14,13 +13,13 @@ tasks.withType(Test) {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.example.cool8puzzle"
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -48,6 +47,9 @@ android {
             includeAndroidResources = true
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -69,28 +71,30 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    def fragment_version = "1.3.2"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    testImplementation "androidx.fragment:fragment-testing:$fragment_version"
-
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-
-    implementation "com.nhaarman:mockito-kotlin:1.6.0"
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'androidx.test:core-ktx:1.3.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+//    implementation "com.nhaarman:mockito-kotlin:1.6.0", {
+//        exclude module: 'org.jetbrains.kotlin:kotlin-reflect'
+//        exclude module: 'org.jetbrains.kotlin:kotlin-stdlib'
+//    }
+    testImplementation 'org.mockito:mockito-core:3.8.0'
+
+    def fragment_version = "1.3.2"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    // Testing Fragments in Isolation
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
     def nav_version = "2.3.4"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    // Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     def room_version = "2.2.6"
 
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-
-    // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
     def koin_version = '2.2.2'
@@ -103,7 +107,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-
 
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.1.0"
