--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -26,20 +26,19 @@ jobs:
       - name: Unit Test
         run: ./gradlew testDebugUnitTest
 
-          - name: generate report
-            uses: actions/upload-artifact@v2
-            with:
-              name: report
-              path: app/build/reports/coverage/debug
+      - name: Generate Report
+          uses: actions/upload-artifact@v2
+          with:
+            name: report
+            path: app/build/reports/coverage/debug
 
+      - name: Download Test Reports Folder
+          uses: actions/download-artifact@v2
+          with:
+            name: report
+            path: app/build/reports/coverage/debug
 
-          - name: Download Test Reports Folder
-            uses: actions/download-artifact@v2
-            with:
-              name: report
-              path: app/build/reports/coverage/debug
-
-          - name: Upload Test Report
-            run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/coverage/debug/report.xml"
+      - name: Upload Test Report
+          run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/coverage/debug/report.xml"
 
 
