--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -27,18 +27,16 @@ jobs:
         run: ./gradlew testDebugUnitTest
 
       - name: Generate Report
-          uses: actions/upload-artifact@v2
-          with:
-            name: report
-            path: app/build/reports/coverage/debug
+      - uses: actions/upload-artifact@v2
+        with:
+          name: report
+          path: app/build/reports/coverage/debug
 
       - name: Download Test Reports Folder
-          uses: actions/download-artifact@v2
-          with:
-            name: report
-            path: app/build/reports/coverage/debug
+      - uses: actions/download-artifact@v2
+        with:
+          name: report
+          path: app/build/reports/coverage/debug
 
       - name: Upload Test Report
-          run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/coverage/debug/report.xml"
-
-
+        run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/coverage/debug/report.xml"
