--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Unit Test
-        run: ./gradlew testDebugUnitTest
+        run: ./gradlew testDebugUnitTest jacocoTestReport
 
       - name: Generate Report
         uses: actions/upload-artifact@v2
