--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled true
+        }
     }
     buildFeatures {
         viewBinding true
