--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'jacoco'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 jacoco {
@@ -120,11 +121,8 @@ dependencies {
     testImplementation 'androidx.test:core-ktx:1.3.0'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
-//    implementation "com.nhaarman:mockito-kotlin:1.6.0", {
-//        exclude module: 'org.jetbrains.kotlin:kotlin-reflect'
-//        exclude module: 'org.jetbrains.kotlin:kotlin-stdlib'
-//    }
     testImplementation 'org.mockito:mockito-core:3.8.0'
+    testImplementation 'org.mockito:mockito-inline:3.8.0'
 
     def fragment_version = "1.3.2"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
