--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,7 @@ dependencies {
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    testImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     def room_version = "2.2.6"
 
