--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Unit Test
         run: ./gradlew testDebugUnitTest jacocoTestReport
 
-      - name: Download Test Reports Folder
-        uses: actions/download-artifact@v2
+      - name: Generate Report
+        uses: actions/upload-artifact@v2
         with:
           name: report
           path: app/build/reports/jacoco/jacocoTestReport
