--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -21,10 +21,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Unit Test
-        run: ./gradlew testDebugUnitTest jacocoTestReport
 
-      - name: Generate Report
+      - name: Unit Test
+        run: ./gradlew testDebugUnitTest
+
+      - name: Generate Coverage Report
+        run: ./gradlew jacocoTestReport
+
+      - name: Upload Report
         uses: actions/upload-artifact@v2
         with:
           name: report
